# libreviz

./: .gitignore  README.md  boxes.py  macro.basic  pyproject.toml
src/boxes/: __main__.py  calibrate.py  cell.py  colors.py  eject_button.py  patched_click.py  patterns.py  run.py  text.py  utils.py
tests/: conftest.py  test_cell.py  test_colors.py
